# sdlu

./: .gitignore  Android.mk  BUGS.txt  CMakeLists.txt  CONTRIBUTING.txt  COPYING  COPYING-extra  COPYING.others.txt  COPYING.txt  COPYING.uthash.txt  ChangeLog  Doxyfile  INSTALL  INSTALL.txt  Makefile.am  Makefile.in  Makefile.ios  README  README-android  README-android.txt  README-cmake  README-configure  README-configure.txt  README-cxx  README-git  README-ios  README-macosx  README-premake  README-raspberrypi.txt  README-windows  README.txt  aclocal.m4  configure  configure.ac  premake4.lua  sdlu-config.in  sdlu.pc.in
extras/: ROADMAP
include/: SDLU.h  SDLU_button.h  SDLU_collide.h  SDLU_combobox.h  SDLU_config.h.in  SDLU_config_android.h  SDLU_config_cmake.h.in  SDLU_config_iphoneos.h  SDLU_config_premake.h.in  SDLU_create.h  SDLU_cxx.h  SDLU_defs.h  SDLU_features.h  SDLU_filedialog.h  SDLU_filesystem.h  SDLU_font.h  SDLU_fps.h  SDLU_hints.h  SDLU_ini.h  SDLU_math.h  SDLU_opengl.h  SDLU_pixels.h  SDLU_render.h  SDLU_sprite.h  SDLU_text.h  SDLU_turtle.h
scripts/: bootstrap
scripts/autotools/m4/: checks.m4  gtk.m4  sdl2-ttf.m4  sdl2.m4  sdlu.m4
scripts/build-scripts/: android-build.sh  android.sh  framework.sh  frameworkbuild.sh  ios.sh  iosbuild.sh  rpibuild.sh  snapshot.sh
scripts/cmake/: CheckFileDialogBackend.cmake  CheckFileSystemBackend.cmake  ConfigureCPack.cmake  FindGLES2.cmake  FindSDL2.cmake  FindSDL2_ttf.cmake  FindSDLU.cmake  Macros.cmake  SDL_ttf.cmake  cmake_uninstall.cmake.in  macros.cmake
scripts/cmake/toolchains/: raspi.cmake
scripts/framework/: Info.plist
scripts/premake/: dirty.lua  functions.lua  tests.lua
src/: SDLU_button.c  SDLU_collide.c  SDLU_combobox.c  SDLU_common.c  SDLU_common.h  SDLU_create.c  SDLU_font.c  SDLU_framerate.c  SDLU_ini.c  SDLU_math.c  SDLU_opengl.c  SDLU_opengl_c.h  SDLU_render.c  SDLU_render_c.h  SDLU_sprite.c  SDLU_ttf.c  SDLU_ttf_data.h  SDLU_userdata.c  SDLU_userdata_c.h
src/button/: SDLU_button.c
src/combo/: SDLU_combobox.c
src/common/: SDLU_common.c  SDLU_common.h  SDLU_error.h  SDLU_userdata.c  SDLU_userdata.h  utlist.h
src/cxx/: SDLU_CButton.cxx  SDLU_CComboBox.cxx  SDLU_CIniHandler.cxx  SDLU_CRWops.cxx  SDLU_CRenderer.cxx  SDLU_CSprite.cxx  SDLU_CTexture.cxx  SDLU_CTurtle.cxx  SDLU_CWindow.cxx
src/filedialog/: SDLU_filedialog.c  SDLU_filedialog_cocoa.m  SDLU_filedialog_cocoa_m.h  SDLU_filedialog_dummy.c  SDLU_filedialog_gtk.c  SDLU_filedialog_gtk_c.h  SDLU_filedialog_win32.c  SDLU_filedialog_win32_c.h  SDLU_filedialog_windows.c  SDLU_filedialog_windows_c.h
src/filesystem/: SDLU_filesystem.c  SDLU_filesystem_dirent.c  SDLU_filesystem_dirent_c.h  SDLU_filesystem_windows.c  SDLU_filesystem_windows_c.h
src/gl/: SDLU_gl.c  gl_defs.h
src/gui/: SDLU_button.c  SDLU_combobox.c
src/ini/: SDLU_ini.c
src/render/: SDLU_pixels.c  SDLU_render.c  SDLU_render_c.h
src/sprite/: SDLU_sprite.c
src/text/: SDLU_ttf.c  SDLU_ttf_data.h
src/turtle/: SDLU_turtle.c
test/: CMakeLists.txt  Makefile.am  Makefile.in  README  README.txt  aclocal.m4  common.c  common.h  configure  configure.ac  testbutton.c  testcollision.c  testcolorkey.c  testcombo.c  testcxx.cxx  testfiledialog.c  testfilesystem.c  testfont.c  testgl.c  testgles2.c  testini.c  testmath.c  testmulticopy.c  testrender.c  testrender2.c  testsprite.c  testtext.c  testturtle.c
